# trading-bot

./: .gitignore  README.md  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
app/bot/: client.py  config.py  main.py  parameters.py  service.py
app/db/: client.py  config.py
app/db/dal/: binance_futures.py  future.py
app/db/models/: __init__.py  binance_futures.py  future.py
app/migrations/: env.py
app/migrations/versions/: 9f578e128d3c_databasecreation.py  9f65775a6155_databasecreate.py  b535c851fc52_databasecreation.py  e3b3a84bcf85_databaseupdate.py  e4f3ffa10a22_databasecreation.py  f0933f7e1dfb_databaseupdate.py
app/utils/: general.py
app/utils/sql/: dal.py
app/worker/: app.py  config.py
